--- a/index.html
+++ b/index.html
@@ -11,15 +11,23 @@
     <title>Lethal Omen</title>
 </head>
 <body>
+  
     <header>
-      <h2 class="logo">Logo</h2>
+
+      <div class="logo">
+        <img src="Keklogo-removed.png">
+      </div>
+
+
       <nav class="navigacio">
         <a href="#">Kezdőlap</a>
         <a href="#">Rólunk</a>
         <a href="#">Elérhetőségek</a>
         <button class="gombloginfel">Bejelentkezés</button>
-      </nav> 
+      </nav>
+
     </header>
+    
     <div class="wrapper">
 
       <span class="bezaras">
