--- a/index.html
+++ b/index.html
@@ -18,12 +18,23 @@
         <img src="Keklogo-removed.png">
       </div>
 
+      <div class="felirat">
+        <h2>Lethal Omen</h2>
+      </div>
 
+
+      
       <nav class="navigacio">
-        <a href="#">Kezdőlap</a>
-        <a href="#">Rólunk</a>
-        <a href="#">Elérhetőségek</a>
-        <button class="gombloginfel">Bejelentkezés</button>
+
+        <div class="navbar">
+
+          <a href="#">Kezdőlap</a>
+          <a href="#">Rólunk</a>
+          <a href="#">Elérhetőségek</a>
+          <button class="gombloginfel">Bejelentkezés</button>
+
+        </div>
+
       </nav>
 
     </header>
